<resources>
    <string name="app_name">Kumo</string>
    <string name="plot_no_b16_near_hotel_utkal_continental_saheed_nagar_bhubaneswar_odisha_751007">Plot no. b16,Near Hotel Utkal continental,saheed nagar,Bhubaneswar,odisha,751007</string>
    <string name="open_9_00_am_10_00_pm_monday_saturday">Open 9:00 am - 10:00 pm Monday - saturday</string>
    <string name="_7077455432">7077455432</string>
    <string name="http_www_kumo_co_in">http://www.kumo.co.in/</string>
    <string name="todo">TODO</string>
    <string name="kumo_we_mainly_focus_on_providing_cost_effective_software_devlopment">KUMO: We mainly focus on providing cost-effective software devlopment.</string>
    <string name="opens_9_00_am_10_00_pm_monday_saturday">Opens 9:00 am - 10:00 pm Monday - Saturday</string>
</resources>
